--- a/package.json
+++ b/package.json
@@ -1,18 +1,30 @@
 {
   "name": "myapp",
   "version": "1.0.0",
-  "description": "",
+  "description": "avec typescript",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "noobstudieux",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.1",
+	"express": "^4.14.1",
     "fs": "~0.0.1-security",
     "http": "~0.0.0",
     "os": "~0.1.1",
-    "typescript": "~2.1.5"
-  }
+    "typescript": "~2.1.5",
+    "body-parser": "~1.10.1",
+    "cookie-parser": "~1.4.3",
+    "cookie-session": "~1.1.0",
+    "ejs": "~2.1.4",
+    "ent": "~0.1.0",
+    "js-sha256": "~0.3.2",
+    "nodemailer": "~2.7.0",
+    "nodemailer-smtp-transport": "~2.7.2",
+    "promise": "^7.1.1",
+    "socket.io": "~1.2.1"
+  },
+  "author": "Etienne<emaurice@hotmail.fr>",
+  "description": "les débuts"
 }
